--- a/html-css/projects/cafe/styles.css
+++ b/html-css/projects/cafe/styles.css
@@ -20,6 +20,39 @@ a {
   text-decoration: none;
 }
 
+.separator {
+  margin: 20px auto;
+  height: 10px;
+  width: 100px;
+  background: #111;
+}
+
+p {
+  margin-bottom: 10px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 15px 25px; 
+  border-radius: 30px;
+  font-weight: 700;
+  font-size: 14px;
+}
+
+.btn-primary {
+  background: white;
+  color: #222;  
+}
+
+.btn-primary:hover {
+  background: #222;
+  color: white;
+}
+.my-10 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 /* Header */
 
 .header {
@@ -53,9 +86,36 @@ a {
 }
 
 .header nav ul li a:hover {
-    background: #444;
+  background: #444;
 }
 
 .active {
-    background: #444;
+  background: #444;
+}
+
+/* VP */
+
+.vp {
+  height: 700px;
+  background: url(./images/cafe1.jpg) center center;
+  background-size: cover;
+  text-align: center;
+}
+
+.vp-content {
+  max-width: 600px;
+  padding-top: 150px;
+  color: white;
+  display: block;
+  margin: auto;
+}
+
+.vp-content h1 {
+  font-size: 50px;
+}
+
+.vp-content p {
+  font-size: 18px;
+  letter-spacing: 0.5px;
+  line-height: 1.9em;
 }
